# gims-automation-mcp-server

./: .gitignore  README.md  pyproject.toml
docs/: QWEN.md  README.md
src/gims_mcp/: __init__.py  __main__.py  client.py  config.py  serializers.py  server.py  utils.py  validators.py
src/gims_mcp/tools/: __init__.py  activator_types.py  datasource_types.py  logs.py  references.py  scripts.py  sync.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_serializers.py  test_tools_activator_types.py  test_tools_datasource_types.py  test_tools_logs.py  test_tools_references.py  test_tools_scripts.py  test_tools_sync.py  test_utils.py  test_validators.py
