[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gims-automation-mcp-server"
version = "0.1.0"
description = "MCP server for GIMS Automation - enables coding agents to develop scripts, data source types, and activator types"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "GIMS Team" }
]
keywords = ["mcp", "gims", "automation", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
gims-mcp-server = "gims_mcp.__main__:main"

[project.urls]
Repository = "https://gitlab.gelarm.ru/gelarm/gims-automation-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/gims_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
